opplegg for å støtte flere filformater